--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "docker:local:test:integration": "chmod +x ./zx/local-env.mjs && ./zx/local-env.mjs && BITBUCKET_CLONE_DIR=. docker-compose run -i api-dev sh -c 'yarn run jest:clear-cache && yarn run test:integration' && rm -rf .env.cicd"
   },
   "dependencies": {
-    "@apollo/server": "^4.3.2",
+    "@apollo/server": "^4.5.0",
+    "apify": "^3.1.4",
     "argon2": "^0.30.3",
-    "aws-sdk": "^2.1315.0",
-    "axios": "^1.3.3",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "bullmq": "^1.90.0",
-    "connect-redis": "^6.1.3",
+    "class-validator": "^0.14.0",
+    "connect-redis": "6.1.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crawlee": "^3.3.0",
     "device-detector-js": "^3.0.3",
     "dotenv": "^16.0.3",
     "env-var": "^7.3.0",
@@ -50,32 +51,32 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
-    "express-slow-down": "^1.5.0",
+    "express-slow-down": "^1.6.0",
     "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
-    "firebase": "^9.17.1",
+    "firebase": "^9.16.0",
     "firebase-admin": "^11.5.0",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.12.0",
     "handy-redis": "^2.3.1",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
-    "html-to-text": "^9.0.3",
+    "html-to-text": "^9.0.5",
     "http-status-codes": "^2.2.0",
-    "ioredis": "^5.3.0",
     "joi": "^17.7.0",
-    "jose": "^4.11.2",
-    "mongodb": "^5.0.0",
-    "mongoose": "^6.9.0",
+    "jose": "^4.13.1",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "nanoid": "3.3.4",
     "node-forge": "^1.3.1",
-    "node-signpdf": "^1.5.0",
+    "node-signpdf": "^1.5.1",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20",
-    "otpauth": "^9.0.2",
+    "nodemon": "^2.0.22",
+    "otpauth": "^9.1.1",
     "pako": "^2.1.0",
-    "pg": "^8.9.0",
+    "pg": "^8.10.0",
+    "playwright": "^1.32.1",
     "pug": "^3.0.2",
     "rate-limit-redis": "^2.1.0",
     "redis": "3.1.2",
@@ -84,45 +85,45 @@
     "supertest": "^6.3.3",
     "toobusy-js": "^0.5.1",
     "ts-node": "^10.9.1",
-    "tslog": "^4.7.2",
-    "type-graphql": "^1.1.1",
+    "tslog": "^4.7.1",
+    "type-graphql": "^2.0.0-beta.1",
     "typeorm": "^0.3.11",
+    "typeorm-store": "^2.0.1",
     "winston": "^3.8.2",
-    "ws": "^8.12.0",
-    "zod": "^3.20.6"
+    "ws": "^8.13.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/connect-redis": "^0.0.19",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/eventemitter3": "^2.0.2",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.4",
+    "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.6",
     "@types/express-slow-down": "^1.3.2",
     "@types/hpp": "^0.2.2",
     "@types/html-to-text": "^9.0.0",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^18.11.19",
+    "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/pako": "^2.0.0",
     "@types/pug": "^2.0.6",
     "@types/rate-limit-redis": "^1.7.4",
     "@types/request-ip": "^0.0.37",
-    "@types/supertest": "^2.0.12",
     "@types/toobusy-js": "^0.5.2",
     "@types/ws": "^8.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "dpdm": "^3.12.0",
-    "eslint": "^8.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "dpdm": "^3.13.0",
+    "eslint": "^8.37.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jest": "^29.4.3",
-    "jest-mock-extended": "^3.0.1",
-    "prettier": "^2.8.4",
+    "jest": "^29.4.1",
+    "jest-mock-extended": "^3.0.4",
+    "prettier": "^2.8.3",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "eslintConfig": {
     "root": true,
