fixed build command so includes sql files

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc",
+    "build": "yarn clean && tsc && yarn copy-files-sql && yarn copy-files-emails ",
+    "clean": "rm -rf ./dist",
+    "copy-files-sql": "cp -r src/db/migrations/* dist/db/migrations/ && rm -rf dist/db/migrations/**/*.ts",
+    "copy-files-emails": "copyfiles -f \"./src/core/email/views/*.pug\" \"./dist/core/email/views\"",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:sql": "./src/scripts/migration-generate.mts",
     "migration:create": "yarn run typeorm migration:create -d src/db/ormconfig.ts",
@@ -120,12 +123,14 @@
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "copyfiles": "^2.4.1",
     "dpdm": "^3.13.0",
     "eslint": "^8.37.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.4.1",
     "jest-mock-extended": "^3.0.4",
     "prettier": "^2.8.3",
+    "rimraf": "^4.4.1",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
