--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "argon2": "^0.30.3",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
-    "bullmq": "^1.90.0",
+    "bullmq": "^3.10.4",
     "class-validator": "^0.14.0",
     "connect-redis": "6.1.3",
     "cookie-parser": "^1.4.6",
@@ -68,14 +68,17 @@
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
     "http-status-codes": "^2.2.0",
+    "https-proxy-agent": "^5.0.1",
     "joi": "^17.9.1",
     "jose": "^4.13.1",
+    "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "nanoid": "3.3.4",
     "node-forge": "^1.3.1",
     "node-signpdf": "^1.5.1",
+    "node-telegram-bot-api": "^0.61.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "otpauth": "^9.1.1",
@@ -112,8 +115,10 @@
     "@types/hpp": "^0.2.2",
     "@types/html-to-text": "^9.0.0",
     "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.192",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "@types/nodemailer": "^6.4.7",
     "@types/pako": "^2.0.0",
     "@types/pug": "^2.0.6",
